<resources>
    <string name="app_name">Directorio UDG</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_actualizar">Actualizar</string>
    <string name="action_settings">Settings</string>

    <string name="list_title_placeholder">Title</string>
    <string name="list_description_placeholder">Description</string>
    <string name="hidden_view_text">Click Me</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_maps2">Map</string>
    <string name="title_activity_detalle_prepa">DetallePrepaActivity</string>

    <string name="preparatoria">Preparatoria </string>
    <string name="direccion">Dirección: </string>
    <string name="codigo_postal">Codigo Postal:</string>
    <string name="telefonos">Tel. </string>
    <string name="administrativos">Administrativos: </string>
    <string name="director">Director. </string>

    <string name=".listaprepasrecycle.direccionDatosPrepas">http://appdirectorioudg.com/preparatoriasMetropolitanas.php</string>
    <string name=".listaprepasrecycle.error.conexion">"Es necesario conectarse a Internet \n para descargar los datos "</string>

    <string name="notification_playing">Reproduciendo radio</string>
    <string name="notification_stop">Click para abrir la radio</string>
    <string name="radio_playing_other">Se esta reproduciendo otra estación. Pulsar el icono de reproduccion detiene la otra estación .</string>
    <string name="ad_id" />
    <string name="volume_low">Turn your volume up!</string>
    <string name="isnotConnected">\"Esta accion requiere conexion a Internet\"</string>
    <string name="Website">Web:</string>
    <string name="centro">Centro</string>
    <string name="puesto">Puesto</string>
    <string name="SecretarioAcademico">SecretarioAcademico</string>
    <string name="SecretarioAdministrativo">Secretario Administrativo</string>
    <string name="botonreproducir">botonReproducir</string>
    <string name="imagen_de_volumen">imagen de volumen</string>
    <string name="imagen_a_mostrarRadio">imagen a mostrar</string>
    <string name="secretario">Secretario</string>
    <string name="visitar">Visitar</string>
    <string name="www_web_com">www.web.com</string>
    <string name="imagen_del_mundo">imagen del mundo</string>
    <string name="imagen_no_disponible">imagen no disponible</string>
    <string name="imagen">imagen</string>
    <string name="numero">Numero</string>
    <string name="nombresecacademico">NombreSecAcademico</string>
    <string name="nombresecadministrativo">NombreSecAdministrativo</string>
    <string name="guillermoisaac_gmail_com">guillermoisaac@gmail.com</string>
    <string name="nombre">Nombre</string>

    <string name="Descargar">Descargar</string>
    <string name="Cancelar">Cancelar</string>
    <string name="nombre_transicion_imagen">imagen_visualizada</string>

    <string name="title_activity_list_gaceta">Gaceta</string>


    <string name="prefijoWebService">http://s512984961.onlinehome.mx/DirectorioUDG/WebService/</string>
    <string name="anyo">Año</string>
    <string name="mes">Mes</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_buscar">Buscar</string>
    <string name="directorio_de_la_universidad_de_guadalajara">Directorio de la Universidad de Guadalajara</string>
    <string name="sinConexion">sin conexion</string>

</resources>
