<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".detallecentro.DetalleCentroActivity"
    tools:showIn="@layout/activity_detalle_centro"
    android:id="@+id/nestedscroll">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="2dp">


    <!-- Card Centro  card_view:elevation="@dimen/card.detalle.lugar.elevation"-->
        <android.support.v7.widget.CardView
            style="@style/Widget.CardDetalle"
            android:id="@+id/cardCentro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="@dimen/card.radius">

            <LinearLayout
                style="@style/Widget.CardContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <!--Etiqueta Perfil -->
                <TextView
                    android:id="@+id/nombreCentro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/centro"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title" />
                <!--Texto de ejemplo-->
                <TextView
                    android:id="@+id/direccionCentro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/direccion" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/codigo_postal"
                    android:id="@+id/codigoPostalCentro" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/www_web_com"
                    android:id="@+id/DirWeb" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_centerHorizontal="true"
                        android:id="@+id/layoutweb"
                        tools:ignore="UseCompoundDrawables,UselessParent">
                        <ImageView
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:src="@drawable/world"
                            android:background="@color/white_transparent"
                            android:id="@+id/imageButton"
                            android:contentDescription="@string/imagen_del_mundo" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/activity_vertical_margin"
                            android:layout_marginLeft="@dimen/activity_horizontal_margin"
                            android:textColor="@color/wallet_holo_blue_light"
                            android:textSize="20sp"
                            android:text="@string/visitar"/>
                    </LinearLayout>


                </RelativeLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>
        <!-- Card Map  card_view:elevation="@dimen/card.detalle.map.elevation"-->
        <android.support.v7.widget.CardView
            style="@style/Widget.CardDetalle"
            android:id="@+id/cardMap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="12dp"
            android:paddingBottom="24dp"
            card_view:cardCornerRadius="@dimen/card.radius"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.gms.maps.MapView
                    xmlns:map="http://schemas.android.com/apk/res-auto"
                    android:name="com.google.android.gms.maps.SupportMapFragment"
                    android:id="@+id/map"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    map:liteMode="true"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    style="?android:attr/borderlessButtonStyle"
                    android:textColor="@color/wallet_holo_blue_light"
                    android:textSize="16sp"
                    android:text="Visualizar"
                    android:id="@+id/btnVisualizar"
                    android:elevation="2dp" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <include layout="@layout/content_main"/>

    </LinearLayout>


</android.support.v4.widget.NestedScrollView>
