<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"

    tools:context=".detalleprepa.DetallePrepaActivity"
    tools:showIn="@layout/activity_detalle_prepa">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="24dp">


    <!-- Card Preparatoria -->
        <android.support.v7.widget.CardView
            android:id="@+id/cardPreparatoria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_margin">

            <LinearLayout
                style="@style/Widget.CardContent"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <!--Etiqueta Perfil -->
                <TextView
                    android:id="@+id/nombrePrep"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/preparatoria"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title" />
                <!--Texto de ejemplo-->
                <TextView
                    android:id="@+id/direccionPrep"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/direccion" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/codigo_postal"
                    android:id="@+id/codigoPostalPrep" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/telefonos"
                    android:id="@+id/telefonosPrep" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:id="@+id/web" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:id="@+id/layoutweb">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/world"
                        android:background="@color/white_transparent"
                        android:id="@+id/imageButton" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/wallet_holo_blue_light"
                        android:text="Visitar"/>
                </LinearLayout>


            </LinearLayout>

        </android.support.v7.widget.CardView>

        <!-- Card Director -->
        <android.support.v7.widget.CardView
            android:id="@+id/cardDirector"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/card_margin"
            android:layout_marginLeft="@dimen/card_margin"
            android:layout_marginRight="@dimen/card_margin">

            <LinearLayout
                style="@style/Widget.CardContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!-- Etiqueta Director -->

                <TextView
                    android:id="@+id/tituloCardDirector"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/administrativos"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/director"
                    android:id="@+id/textView3" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:id="@+id/lblDirector" />

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:id="@+id/lblCorreoDirector" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="Secretario"
                        android:id="@+id/textView4" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:id="@+id/lblSecretario" />

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:id="@+id/lblCorreoSecretario" />
                    </LinearLayout>

                </LinearLayout>


            </LinearLayout>

        </android.support.v7.widget.CardView>

        <!-- Card Map -->
        <android.support.v7.widget.CardView
            android:id="@+id/cardExtra"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/card_margin"
            android:layout_marginLeft="@dimen/card_margin"
            android:layout_marginRight="@dimen/card_margin"
            android:paddingTop="12dp"
            android:paddingBottom="24dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/cardMapa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Mapa"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:layout_marginLeft="24dp"/>

                <com.google.android.gms.maps.MapView
                    xmlns:map="http://schemas.android.com/apk/res-auto"
                    android:name="com.google.android.gms.maps.SupportMapFragment"
                    android:id="@+id/map"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_below="@id/cardMapa"
                    map:liteMode="true"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>


</android.support.v4.widget.NestedScrollView>
